fix error messages are clipped on login form

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -142,7 +142,10 @@ nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
 .auth0-lock-input {
    margin: 0 !important;
  }
-
+.auth0-lock-widget {
+  overflow: visible !important;
+  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3) !important;
+}
  .auth0-lock-sign-up-terms-agreement > label > input {
   left: auto !important;
   opacity: 1 !important;
